fix(styles): fixed layout overflow by removing hardcoded heights
- adjusted styles to better handle content overflow
- moved horizontal scroll styles to components/kanban/Board.vue
- scroll logic work pending, needs to be completed
- added pages/privacy-policy.vue to .gitignore to prevent accidental commits

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .nitro
 .cache
 dist
+/generated/prisma/
+pages/privacy-policy.vue
 
 # Node dependencies
 node_modules
@@ -22,5 +24,4 @@ logs
 .env
 .env.*
 !.env.example
-/generated/prisma/
 
